NXP-32508: Improve indexing error handling